# GLCP

./: CMakeLists.txt  README.md  cartpole_demo.cpp  compile.sh  load_data.py  plot_me.py
include/: CMakeLists.txt  controllers.h  eom.h  glob.h  integration.h  math.h  observers.h  riccati_solver.h  rk54.h  rk65ve.h  rk87ve.h  steppers.h  structs.h  system.h  util.h
src/: CMakeLists.txt  controllers.cpp  eom.cpp  integration.cpp  observers.cpp  riccati_solver.cpp  steppers.cpp  system.cpp
